testing project page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 
-  </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="">Projects</a></p><br><br><br><br>
+  </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="projects.html">Projects</a></p><br><br><br><br>
     </div>
   </div>
 
