add project images

--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,97 @@
-<h1>THESE ARE MY PROJECTS</h1>
+<html class=" js no-touch svg inlinesvg svgclippaths no-ie8compat js no-touch svg inlinesvg svgclippaths no-ie8compat" lang="en" style=""><!--<![endif]--><head>
+  <meta charset="utf-8">
+
+  <!-- Set the viewport width to device width for mobile -->
+  <meta name="viewport" content="width=device-width">
+
+  <title>Colt Steele</title>
+
+  <!-- Included CSS Files (Uncompressed) -->
+  <!--
+  <link rel="stylesheet" href="stylesheets/foundation.css">
+  -->
+
+
+
+
+
+  <!-- Included CSS Files (Compressed) -->
+  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="f.css">
+  <link rel="stylesheet" href="stylesheets/app.css">
+  <link href="http://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet" type="text/css">
+
+  <script src="javascripts/modernizr.foundation.js"></script>
+<script type="text/javascript" src="chrome-extension://bfbmjmiodbnnpllbbbfblcplfjjepjdn/js/injected.js"></script><style type="text/css"></style></head>
+<body style="zoom: 1;">
+
+
+
+  <div class="row animated fadeIn">
+    <div class="eight columns">
+    <h1>Projects</h1>
+
+    <p>Some things I've worked on:<br>
+    <a href="http://colt.github.io/musicmotion">Motion Music</a> - an instrument that you play by moving<br> <img src="shot3.png" alt=""> <br>
+    <a href="http://dribbble.com/andyisonline">All The Lonely People</a> - Listen to loneliness via Twitter<br><img src="shot2.png" alt="">
+    <a href="http://dribbble.com/andyisonline">Tiny Talk</a> - A tiny social network for familes<br>
+    <img src="shot4.png" alt=""> <br>
+    <a href="http://dribbble.com/andyisonline">Reading Room</a> - saves texts and images from articles<br><img src="shot1.png" alt=""> <br>
+
+
+
+  </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="projects.html">Projects</a></p><br><br><br><br>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Included JS Files (Uncompressed) -->
+  <!--
+  <script src="javascripts/jquery.js"></script>
+  <script src="javascripts/jquery.foundation.mediaQueryToggle.js"></script>
+  <script src="javascripts/jquery.foundation.forms.js"></script>
+  <script src="javascripts/jquery.event.move.js"></script>
+  <script src="javascripts/jquery.event.swipe.js"></script>
+  <script src="javascripts/jquery.foundation.reveal.js"></script>
+  <script src="javascripts/jquery.foundation.orbit.js"></script>
+  <script src="javascripts/jquery.foundation.buttons.js"></script>
+  <script src="javascripts/jquery.foundation.joyride.js"></script>
+  <script src="javascripts/jquery.foundation.clearing.js"></script>
+  <script src="javascripts/jquery.foundation.magellan.js"></script>
+
+  -->
+
+  <!-- Included JS Files (Compressed) -->
+  <script src="javascripts/foundation.min.js"></script>
+
+  <!-- Initialize JS Plugins -->
+  <script src="javascripts/app.js"></script>
+
+
+    <script>
+    $(window).load(function(){
+      $("#featured").orbit();
+    });
+    </script>
+
+
+
+</body></html>
