--- a/projects.html
+++ b/projects.html
@@ -34,16 +34,19 @@
 
     <p>Some things I've worked on:<br>
     <a href="http://colt.github.io/musicmotion">Motion Music</a> - an instrument that you play by moving<br> <img src="shot3.png" alt=""> <br>
-    <a href="http://dribbble.com/andyisonline">All The Lonely People</a> - Listen to loneliness via Twitter<br><img src="shot2.png" alt="">
-    <a href="http://dribbble.com/andyisonline">Tiny Talk</a> - A tiny social network for familes<br>
+    <a href="http://allthelonelypeople.herokuapp.com">All The Lonely People</a> - Listen to loneliness via Twitter<br><img src="shot2.png" alt="">
+    <a href="http://tinytalk-app.herokuapp.com">Tiny Talk</a> - A tiny social network for familes<br>
     <img src="shot4.png" alt=""> <br>
-    <a href="http://dribbble.com/andyisonline">Reading Room</a> - saves texts and images from articles<br><img src="shot1.png" alt=""> <br>
+    <a href="https://github.com/Colt/readroom">Reading Room</a> - saves texts and images from articles<br><img src="shot1.png" alt=""> <br>
 
 
 
-  </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="projects.html">Projects</a></p><br><br><br><br>
+  </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="projects.html">Projects</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="http://colt.github.io">Blog</a></p><br><br><br><br>
     </div>
   </div>
+
+  http://colt.github.io
+
 
 
 
