--- a/projects.html
+++ b/projects.html
@@ -11,10 +11,6 @@
   <link rel="stylesheet" href="stylesheets/foundation.css">
   -->
 
-
-
-
-
   <!-- Included CSS Files (Compressed) -->
   <link rel="stylesheet" href="animate.css">
   <link rel="stylesheet" href="f.css">
@@ -30,8 +26,8 @@
 
   <div class="row animated fadeIn">
     <div class="eight columns">
-    <h1>Projects</h1>
-
+    <h1><a href="index.html">Colt Steele</a></h1>
+    <h2>Web Developer, Audio Engineer</h2>
     <p>Some things I've worked on:<br>
     <a href="http://colt.github.io/musicmotion">Motion Music</a> - an instrument that you play by moving<br> <img src="shot3.png" alt=""> <br>
     <a href="http://allthelonelypeople.herokuapp.com">All The Lonely People</a> - Listen to loneliness via Twitter<br><img src="shot2.png" alt="">
