add resume dropbox link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="eight columns">
     <h1>Colt Steele</h1>
     <h2>Web Developer, Audio Engineer</h2>
-    <h3>I teach full-stack web development courses at <a href="https://generalassemb.ly/">General Assembly SF,</a><!--  a start up developing a variety of products for patients and health professionals. --> focusing on things like Ruby, Sinatra, Rails, SQL, and Javascript. </h3>
+    <h3>I teach full-stack web development courses at <a href="https://generalassemb.ly/">General Assembly SF,</a><!--  a start up developing a variety of products for patients and health professionals. --> with an emphasis on things like Ruby, Sinatra, Rails, SQL, and Javascript. </h3>
     <p>I used to work at <a href="http://en.wikipedia.org/wiki/DFA_Records">DFA Records</a> as an audio engineer.  I worked on some awesome records like <a href="http://arcadefire.com/reflektorpreorder/us/">this,</a> <a href="http://www.yeahyeahyeahs.com/music/mosquito-deluxe/">this,</a> and <a href="http://www.shutupandplaythehits.com/">this.</a> You can check out some of my web development projects <a href="projects.html">Here</a>.  Thanks for checking out my site.  Have a great day! <!-- on my <a href="http://dribbble.com/andyisonline/">Dribbble</a> page, --> <!-- or check out my <a href="https://twitter.com/andyisonline">Twitter</a> for cat related Instagram posts. --> <!-- Once in a blue moon I <a href="http://andyisonline.com/cncrtknvs/">draw things</a> too.</p> -->
     <!-- <p>Some things I've designed:<br>
     <a href="http://dribbble.com/andyisonline">Dribbble shots</a><br>
@@ -50,7 +50,7 @@
 
  -->
 
-  </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="projects.html">Projects</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="http://colt.github.io">Blog</a></p><br><br><br><br>
+  </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="https://www.dropbox.com/s/ty6kfgdn6weaex2/ColtSteeleResume.pdf">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="projects.html">Projects</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="http://colt.github.io">Blog</a></p><br><br><br><br>
     </div>
   </div>
 
