--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
 
 
 
-  </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="projects.html">Projects</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="http://colt.github.io">Blog</a></p><br><br><br><br>
+  </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="https://www.dropbox.com/s/ty6kfgdn6weaex2/ColtSteeleResume.pdf">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="projects.html">Projects</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="http://colt.github.io">Blog</a></p><br><br><br><br>
     </div>
   </div>
 
