--- a/index.html
+++ b/index.html
@@ -33,22 +33,7 @@
     <h1>Colt Steele</h1>
     <h2>Web Developer, Audio Engineer</h2>
     <h3>I teach full-stack web development courses at <a href="https://generalassemb.ly/">General Assembly SF,</a><!--  a start up developing a variety of products for patients and health professionals. --> with an emphasis on things like Ruby, Sinatra, Rails, SQL, and Javascript. </h3>
-    <p>I used to work at <a href="http://en.wikipedia.org/wiki/DFA_Records">DFA Records</a> as an audio engineer.  I worked on some awesome records like <a href="http://arcadefire.com/reflektorpreorder/us/">this,</a> <a href="http://www.yeahyeahyeahs.com/music/mosquito-deluxe/">this,</a> and <a href="http://www.shutupandplaythehits.com/">this.</a> You can check out some of my web development projects <a href="projects.html">Here</a>.  Thanks for checking out my site.  Have a great day! <!-- on my <a href="http://dribbble.com/andyisonline/">Dribbble</a> page, --> <!-- or check out my <a href="https://twitter.com/andyisonline">Twitter</a> for cat related Instagram posts. --> <!-- Once in a blue moon I <a href="http://andyisonline.com/cncrtknvs/">draw things</a> too.</p> -->
-    <!-- <p>Some things I've designed:<br>
-    <a href="http://dribbble.com/andyisonline">Dribbble shots</a><br>
-    <a href="http://analytics.howareyou.com/#/analytics">Health Analytics</a><br>
-    <a href="https://en-gb.howareyou.com/">howareyou.com</a><br>
-    <a href="http://www.cambridgehealthcare.com/">cambridgehealthcare.com</a><br>
-    <a href="http://www.faber.co.uk/">faber.co.uk</a><br>
-    <a href="http://www.svc2uk.com/">svc2uk.com</a> -->
-
- <!--    <p>Some of my projects:<br>
-    <a href="http://dribbble.com/andyisonline">Motion Music</a> - an instrument that you play by moving<br> <img src="shot1.png" alt="">
-    <a href="http://dribbble.com/andyisonline">All The Lonely People</a> - Listen to loneliness via Twitter<br><img src="shot2.png" alt="">
-    <a href="http://dribbble.com/andyisonline">Tiny Talk</a> - A tiny social network for familes<br>
-    <a href="http://dribbble.com/andyisonline">Reading Room</a> - saves texts and images from articles<br>
-
- -->
+    <p>I used to work at <a href="http://en.wikipedia.org/wiki/DFA_Records">DFA Records</a> as an audio engineer.  I worked on some awesome records like <a href="http://arcadefire.com/reflektorpreorder/us/">this,</a> <a href="http://www.yeahyeahyeahs.com/music/mosquito-deluxe/">this,</a> and <a href="http://www.shutupandplaythehits.com/">this.</a> You can check out some of my web development projects <a href="projects.html">Here</a>.  Thanks for checking out my site.  Have a great day!
 
   </p><p><a class="footer" href="mailto:coltsteele1@gmail.com">Email Me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="https://www.dropbox.com/s/ty6kfgdn6weaex2/ColtSteeleResume.pdf">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="projects.html">Projects</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="footer" href="http://colt.github.io">Blog</a></p><br><br><br><br>
     </div>
