--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
     <h1>Resume</h1>
     <h2>Web Developer, Audio Engineer</h2>
     <h3>I teach full-stack web development courses at <a href="https://generalassemb.ly/">General Assembly SF,</a><!--  a start up developing a variety of products for patients and health professionals. --> focusing on things like Ruby, Sinatra, Rails, SQL, and Javascript. </h3>
-    <p>I used to work at <a href="http://en.wikipedia.org/wiki/DFA_Records">DFA Records</a> as an audio engineer.  I worked on some awesome records like <a href="http://arcadefire.com/reflektorpreorder/us/">this,</a> <a href="http://www.yeahyeahyeahs.com/music/mosquito-deluxe/">this,</a> and <a href="http://www.shutupandplaythehits.com/">this.</a> You can check out some of my web development projects <a href="">Here</a>.  Thanks for checking out my site.  Have a great day! <!-- on my <a href="http://dribbble.com/andyisonline/">Dribbble</a> page, --> <!-- or check out my <a href="https://twitter.com/andyisonline">Twitter</a> for cat related Instagram posts. --> <!-- Once in a blue moon I <a href="http://andyisonline.com/cncrtknvs/">draw things</a> too.</p> -->
+    <p>I used to work at <a href="http://en.wikipedia.org/wiki/DFA_Records">DFA Records</a> as an audio engineer.  I worked on some awesome records like <a href="http://arcadefire.com/reflektorpreorder/us/">this,</a> <a href="http://www.yeahyeahyeahs.com/music/mosquito-deluxe/">this,</a> and <a href="http://www.shutupandplaythehits.com/">this.</a> You can check out some of my web development projects <a href="">Here</a>.  Thanks for checking out my site.  Have a great day!
     <p>Some of my projects:<br>
     <a href="http://dribbble.com/andyisonline">Motion Music</a> - an instrument that you play by moving<br>
     <a href="http://analytics.howareyou.com/#/analytics">Health Analytics</a><br>
@@ -47,37 +47,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- Included JS Files (Uncompressed) -->
-  <!--
-  <script src="javascripts/jquery.js"></script>
-  <script src="javascripts/jquery.foundation.mediaQueryToggle.js"></script>
-  <script src="javascripts/jquery.foundation.forms.js"></script>
-  <script src="javascripts/jquery.event.move.js"></script>
-  <script src="javascripts/jquery.event.swipe.js"></script>
-  <script src="javascripts/jquery.foundation.reveal.js"></script>
-  <script src="javascripts/jquery.foundation.orbit.js"></script>
-  <script src="javascripts/jquery.foundation.buttons.js"></script>
-  <script src="javascripts/jquery.foundation.joyride.js"></script>
-  <script src="javascripts/jquery.foundation.clearing.js"></script>
-  <script src="javascripts/jquery.foundation.magellan.js"></script>
-
-  -->
 
   <!-- Included JS Files (Compressed) -->
   <script src="javascripts/foundation.min.js"></script>
