--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,13 @@
   <div class="row animated fadeIn">
     <div class="eight columns">
     <h1><a href="index.html">Colt Steele</a></h1>
-    <h2>Web Developer, Audio Engineer</h2>
-    <p>Some things I've worked on:<br>
-    <a href="http://colt.github.io/musicmotion">Motion Music</a> - an instrument that you play by moving<br> <img src="shot5.png" alt=""> <br>
-    <a href="http://allthelonelypeople.herokuapp.com">All The Lonely People</a> - Listen to loneliness via Twitter<br><img src="shot2.png" alt="">
-    <a href="http://tinytalk-app.herokuapp.com">Tiny Talk</a> - A tiny social network for familes<br>
+    <h2>Some things I've worked on:</h2>
+    <p><!-- <b>Some things I've worked on:</b><br> -->
+    <a href="http://colt.github.io/musicmotion">Motion Music</a> - an instrument that you play by moving. It uses your webcam to track motion and make music.  <br> <img src="shot5.png" alt=""> <br>
+    <a href="http://allthelonelypeople.herokuapp.com">All The Lonely People</a> - Listen to loneliness live via Twitter.  Every time someone tweets the phrase "so lonely", a computerized voice reads the tweet out loud.<br><img src="shot2.png" alt="">
+    <a href="http://tinytalk-app.herokuapp.com">Tiny Talk</a> - A tiny social network for families to share photos, links, articles, videos, and more.<br>
     <img src="shot4.png" alt=""> <br>
-    <a href="https://github.com/Colt/readroom">Reading Room</a> - saves texts and images from articles<br><img src="shot1.png" alt=""> <br>
+    <a href="https://github.com/Colt/readroom">Reading Room</a> - Allows you to bookmark and save articles. It extracts text and images only and displays them in a readable format.  Each day it picks a new article from your library for you to read.<br><img src="shot1.png" alt=""> <br>
 
 
 
@@ -41,54 +41,6 @@
     </div>
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- Included JS Files (Uncompressed) -->
-  <!--
-  <script src="javascripts/jquery.js"></script>
-  <script src="javascripts/jquery.foundation.mediaQueryToggle.js"></script>
-  <script src="javascripts/jquery.foundation.forms.js"></script>
-  <script src="javascripts/jquery.event.move.js"></script>
-  <script src="javascripts/jquery.event.swipe.js"></script>
-  <script src="javascripts/jquery.foundation.reveal.js"></script>
-  <script src="javascripts/jquery.foundation.orbit.js"></script>
-  <script src="javascripts/jquery.foundation.buttons.js"></script>
-  <script src="javascripts/jquery.foundation.joyride.js"></script>
-  <script src="javascripts/jquery.foundation.clearing.js"></script>
-  <script src="javascripts/jquery.foundation.magellan.js"></script>
-
-  -->
-
-  <!-- Included JS Files (Compressed) -->
-  <script src="javascripts/foundation.min.js"></script>
-
-  <!-- Initialize JS Plugins -->
-  <script src="javascripts/app.js"></script>
-
-
-    <script>
-    $(window).load(function(){
-      $("#featured").orbit();
-    });
-    </script>
 
 
 
