add login info for tinytalk

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
     <a href="http://colt.github.io/musicmotion">Motion Music</a> - an instrument that you play by moving. It uses your webcam to track motion and make music.  <br> <img src="shot5.png" alt=""> <br>
     <a href="http://allthelonelypeople.herokuapp.com">All The Lonely People</a> - Listen to loneliness live via Twitter.  Every time someone tweets the phrase "so lonely", a computerized voice reads the tweet out loud.<br><img src="shot2.png" alt="">
     <a href="http://colt.github.io/HeadTrackingPlaybackSpeed/">Wreck This Song</a> - Manipulate the speed of Miley Cyrus' "Wrecking Ball" by moving your head towards and away from the screen.  Only works in Chrome and Firefox for now.<br><img src="shot7.png" alt="">
-    <a href="http://tinytalk-app.herokuapp.com">Tiny Talk</a> - A tiny social network for families to share photos, links, articles, videos, and more.<br>
+    <a href="http://tinytalk-app.herokuapp.com">Tiny Talk</a> - A tiny social network for families to share photos, links, articles, videos, and more.  EXAMPLE ACCOUNT: login with Email: colt123@gmail.com and password: coltcolt.<br>
     <img src="shot4.png" alt=""> <br>
     <a href="https://github.com/Colt/readroom">Reading Room</a> - Allows you to bookmark and save articles. It extracts text and images only and displays them in a readable format.  Each day it picks a new article from your library for you to read.<br><img src="shot1.png" alt=""> <br>
 
